# HomeSensorDisplay

./: .gitignore  .gitmodules  README.md  flashSD.sh
displayApplication/: CMakeLists.txt  lv_conf.h  main.c
meta-display/: README
meta-display/conf/: layer.conf
meta-display/conf/machine/: raspberrypi5-display.conf
meta-display/recipes-apps/backend/: backend.bb
meta-display/recipes-apps/backend/files/: backend.service
meta-display/recipes-apps/fb0fill/: fb0fill_1.0.bb
meta-display/recipes-apps/fb0fill/fb0fill/: fb0fill.c
meta-display/recipes-apps/frontend/: frontend.bb
meta-display/recipes-apps/frontend/files/: frontend.service
meta-display/recipes-apps/lvgl-hello/: lvgl-hello.bb
meta-display/recipes-apps/lvgl-hello/files/: lvgl_hello.service
meta-display/recipes-apps/shared/: shared.bb
meta-display/recipes-apps/touchread/: touchread_1.0.bb
meta-display/recipes-connectivity/wifi-auto/files/: wlan0.network
meta-display/recipes-core/images/: display-image.bb
meta-display/recipes-core/systemd/: systemd_%.bbappend
meta-display/recipes-kernel/hcsr501/: hcsr501_git.bb
meta-display/recipes-kernel/hcsr501/files/: hcsr501-modprobe.conf  hcsr501-modules-load.conf
meta-gateway/conf/: layer.conf
meta-gateway/conf/machine/: raspberrypi5-gateway.conf
meta-gateway/recipes-apps/fb0fill/: fb0fill_1.0.bb
meta-gateway/recipes-apps/fb0fill/fb0fill/: Makefile  default  fb0fill.service
meta-gateway/recipes-apps/lvgl-hello/: lvgl-hello.bb
meta-gateway/recipes-apps/lvgl-hello/files/: CMakeLists.txt  lv_conf.h  main.c
meta-gateway/recipes-apps/touchread/touchread/: Makefile  touchread.c
meta-gateway/recipes-connectivity/wifi-auto/: wifi-auto.bb
meta-gateway/recipes-core/images/: gateway-image.bb
meta-gateway/recipes-core/packagegroups/: packagegroup-ssh.bb  packagegroup-support.bb  packagegroup-wifi.bb
